[tool.poetry]
name = "dine"
version = "0.1.0"
description = "Parser Combinator Library targeting Python 3.10+"
authors = ["nathan-wien"]

[tool.poetry.dependencies]
python = "^3.10"

sphinx = { version = "5.1.1", optional = true }
sphinx-material = { version = "0.0.35", optional = true }
sphinx-autodoc-typehints = { version = "1.19.2", optional = true }
sphinx-markdown-builder = { version = "0.5.5", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-material",
    "sphinx-autodoc-typehints",
    "sphinx-markdown-builder",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.coverage.paths]
source = ["src/dine", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src/dine"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    # re-enable standard pragma
    "pragma: cover",
    # unreachable branches
    "raise InvalidBranchException"
]
