[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dine"
description = "Parser Combinator Library for Python 3.10+"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["parser"]
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage",
  "flit",
  "pip-tools",
  "pre-commit",
  "pytest",
]
docs = [
  "sphinx",
  "sphinx-material",
  "sphinx-autodoc-typehints",
  "sphinx-markdown-builder",
  "sphinx-rtd-theme",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["src/dine", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src/dine"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    # re-enable standard pragma
    "pragma: cover",
    # unreachable branches
    "raise InvalidBranchException"
]
