[metadata]
name = dine
description = A parser combinator library for Python 3.10+
author = Nhat M. Nguyen

[options]
packages = dine
python_requires = >=3.10
package_dir = =src
zip_safe = no

[options.extras_require]
dev =
    black==22.3.0
    isort==5.10.1
    flake8==4.0.1
    mypy==0.941
    pytest==7.0.1
    pytest-cov==3.0.0
    pre-commit==2.17.0
    sphinx==4.4.0
    sphinx-material==0.0.35
    sphinx-autodoc-typehints==1.14.1
    sphinx-markdown-builder==0.5.5

[options.package_data]
dine = py.typed

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = -v --cov-config=.coveragerc --cov=dine --cov-report=term-missing --cov-report=xml
testpaths = tests
