[metadata]
name = dine
description = A parser combinator library for Python 3.10+
author = Nhat M. Nguyen

[options]
packages = dine
python_requires = >=3.10
package_dir = =.
zip_safe = no

[options.package_data]
dine = py.typed

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = -v --cov-config=.coveragerc --cov=dine --cov-report=term-missing --cov-report=xml
testpaths = tests
